Bổ sung tailscale và cloudflared

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,22 @@ ANTIGRAVITY_MANAGER_HOST_PORT=8045
 ANTIGRAVITY_MANAGER_WEB_PASSWORD=changeme_strong_password_here
 
 # ==============================================================================
+# TAILSCALE & CLOUDFLARED SETTINGS
+# ==============================================================================
+
+# Tailscale OAuth client secret / auth key (required cho service tailscale)
+TAILSCALE_CLIENT_SECRET=
+
+# Tags advertise lên tailnet
+TAILSCALE_TAGS=tag:ci
+
+# Cloudflare tunnel credentials JSON string (required cho service cloudflared)
+CLOUDFLARED_CREDENTIALS=
+
+# Port SSH host để cloudflared route (giá trị mặc định hiện hardcode 2222 trong config tunnel)
+SSH_PORT=2222
+
+# ==============================================================================
 # RCLONE SYNC SETTINGS
 # ==============================================================================
 
