--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,23 @@
 # ==============================================================================
 
 services:
+  tailscale:
+    image: tailscale/tailscale:latest
+    hostname: github-runner
+    network_mode: "host"
+    environment:
+      - TS_AUTHKEY=${TAILSCALE_CLIENT_SECRET}
+      - TS_USERSPACE=false
+      - TS_STATE_DIR=/var/lib/tailscale
+      - TS_EXTRA_ARGS=--advertise-tags=${TAILSCALE_TAGS:-tag:ci} --accept-dns=true --accept-routes
+    volumes:
+      - tailscale-data:/var/lib/tailscale
+      - /dev/net/tun:/dev/net/tun
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
+    restart: unless-stopped
+
   rclone-sync:
     image: rclone/rclone:latest
     restart: unless-stopped
@@ -70,10 +87,28 @@ services:
     networks:
       - antigravity-net
 
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    restart: unless-stopped
+    network_mode: "host"
+    entrypoint:
+      - /bin/sh
+      - -ec
+      - |
+        : "$${CLOUDFLARED_CREDENTIALS:?CLOUDFLARED_CREDENTIALS is required}"
+        printf '%s' "$${CLOUDFLARED_CREDENTIALS}" > /tmp/cloudflared-credentials.json
+        exec cloudflared tunnel --config /etc/cloudflared/config.yml --credentials-file /tmp/cloudflared-credentials.json run
+    environment:
+      - CLOUDFLARED_CREDENTIALS=${CLOUDFLARED_CREDENTIALS}
+    volumes:
+      - ./cloudflared-config.yml:/etc/cloudflared/config.yml:ro
+
 volumes:
   antigravity_data:
     driver: local
   shared_ready:
+    driver: local
+  tailscale-data:
     driver: local
 
 networks:
