--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,14 +42,6 @@ jobs:
         run: |
           dotenvrtdb -e .env -- node -e "const req=['TAILSCALE_CLIENT_SECRET','CLOUDFLARED_CREDENTIALS','ANTIGRAVITY_MANAGER_WEB_PASSWORD','ANTIGRAVITY_MANAGER_REMOTE_PATH','ANTIGRAVITY_MANAGER_S3_ENDPOINT','ANTIGRAVITY_MANAGER_S3_ACCESS_KEY_ID','ANTIGRAVITY_MANAGER_S3_SECRET_ACCESS_KEY'];const miss=req.filter(k=>!process.env[k]);if(miss.length){console.error('Missing env: '+miss.join(', '));process.exit(1)};JSON.parse(process.env.CLOUDFLARED_CREDENTIALS);console.log('Required env looks good')"
 
-      # - name: Render cloudflared config from .env
-      #   run: |
-      #     dotenvrtdb -e .env -- node -e "const fs=require('fs');const p='cloudflared-config.yml';const port=process.env.SSH_PORT||'2222';let y=fs.readFileSync(p,'utf8');if(y.includes('__SSH_PORT__')){y=y.replace(/__SSH_PORT__/g,port);fs.writeFileSync(p,y);console.log('cloudflared-config.yml rendered with SSH_PORT='+port)}else{console.log('cloudflared-config.yml already static; skip render')}"
-
-      # - name: Create cloudflared credentials file from .env
-      #   run: |
-      #     dotenvrtdb -e .env -- node -e "const fs=require('fs');const v=process.env.CLOUDFLARED_CREDENTIALS;if(!v)throw new Error('CLOUDFLARED_CREDENTIALS is missing');JSON.parse(v);fs.writeFileSync('cloudflared-credentials.json', v);console.log('cloudflared-credentials.json created');"
-
       - name: Start services
         run: |
           docker compose --env-file .env up -d
@@ -135,7 +127,7 @@ jobs:
 
       - name: Keep alive (short)
         run: |
-          npx --yes @ongtrieuhau861457/runner-keep-alive --interval 60 --services All || true
+          npx --yes @ongtrieuhau861457/runner-keep-alive --interval 60 --services docker
 
       - name: Cleanup
         if: always()
